force-app/main/default/objects/RMS_Manifest__c/RMS_Manifest__c.object-meta.xml
<CustomObject>
    <description>Investigator case return manifest generated by the Retention Management System.</description>
    <label>RMS Manifest</label>
    <nameField>
        <displayFormat>RMS-{000000}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMS Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>