force-app/main/default/objects/RMS_Manifest__c/fields/Acknowledgment_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Snapshot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgment Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>