force-app/main/default/objects/RMS_Manifest__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>