force-app/main/default/objects/RMS_Manifest__c/fields/FedEx_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FedEx Tracking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>