force-app/main/default/objects/RMS_Manifest__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RMS Manifests</relationshipLabel>
    <relationshipName>RMS_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>