force-app/main/default/objects/RMS_Manifest__c/fields/Manifest_Date__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manifest Date</label>
    <type>Date</type>
</CustomField>