force-app/main/default/objects/RMS_Manifest__c/fields/Modified__c.field-meta.xml
<CustomField>
    <fullName>Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modified</label>
    <type>Checkbox</type>
</CustomField>