force-app/main/default/objects/RMS_Manifest__c/fields/Return_Address_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Return_Address_Snapshot__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Address Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>